# k8sdesk

./: .gitignore  LICENSE  README.md  angular.json  package-lock.json  package.json  single-kube-config.yaml
.github/workflows/: release.yml
src/: index.html  styles.scss
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  dashboard.rs  error.rs  kube_client.rs  lib.rs  main.rs  safety.rs  store.rs
src-tauri/src/dsl/: executor.rs  parser.rs
src/app/: app.component.html  app.component.scss  app.component.ts  app.config.ts
src/app/components/cluster-form/: cluster-form.component.html  cluster-form.component.scss  cluster-form.component.ts
src/app/components/confirm-modal/: confirm-modal.component.html  confirm-modal.component.scss  confirm-modal.component.ts
src/app/components/file-manager/: file-manager.component.html  file-manager.component.scss  file-manager.component.ts
src/app/components/terminal/: terminal.component.html  terminal.component.scss  terminal.component.ts
src/app/components/theme-modal/: theme-modal.component.html  theme-modal.component.scss  theme-modal.component.ts
src/app/models/: cluster.ts
src/app/services/: tauri.service.ts  theme.service.ts
