[package]
name = "k8sdesk"
version = "0.1.0"
description = "Minimal safe Kubernetes desktop client"
edition = "2021"
rust-version = "1.77"

[lib]
name = "k8sdesk_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "k8sdesk"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }

# Async / runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Crypto / secrets
aes-gcm = "0.10"
rand = "0.8"
keyring = "3"
zeroize = { version = "1", features = ["derive"] }
base64 = "0.22"
hmac = "0.12"
sha2 = "0.10"

# Kubernetes
kube = { version = "0.95", default-features = false, features = ["client", "rustls-tls", "config", "ws"] }
k8s-openapi = { version = "0.23", features = ["latest"] }

# Tauri plugins
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"

# Misc
open = "5"
rustls = { version = "0.23", default-features = false }
tokio-rustls = { version = "0.26", default-features = false }
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
once_cell = "1"
chrono = { version = "0.4", features = ["serde"] }

[features]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
